[gd_scene load_steps=13 format=2]

[ext_resource path="res://art/Tree Pieces/Pine/0005.png" type="Texture" id=1]
[ext_resource path="res://scenes/elements/background_color.tscn" type="PackedScene" id=2]
[ext_resource path="res://scenes/DialogueBoxHolder.tscn" type="PackedScene" id=3]
[ext_resource path="res://ui/basic_theme.tres" type="Theme" id=4]
[ext_resource path="res://scripts/score_keeper.gd" type="Script" id=5]
[ext_resource path="res://scenes/day_two/day_two_outro.gd" type="Script" id=6]
[ext_resource path="res://art/tool.png" type="Texture" id=7]
[ext_resource path="res://art/tools_header.png" type="Texture" id=8]
[ext_resource path="res://art/dc0dw0y-6473555f-a449-4ca2-a519-7522693e870e.jpg" type="Texture" id=9]
[ext_resource path="res://art/faces/protester.png" type="Texture" id=10]
[ext_resource path="res://art/screen.png" type="Texture" id=11]
[ext_resource path="res://animation/boss_faces.tres" type="SpriteFrames" id=12]

[node name="day_two_outro" type="Node2D"]
script = ExtResource( 6 )

[node name="TextureRect" type="TextureRect" parent="."]
visible = false
margin_left = -668.0
margin_top = 93.0
margin_right = 1252.0
margin_bottom = 1173.0
texture = ExtResource( 9 )

[node name="BackgroundColor" parent="." instance=ExtResource( 2 )]

[node name="destroy_timer" type="Timer" parent="."]
wait_time = 0.5
one_shot = true

[node name="collapse_timer" type="Timer" parent="."]
wait_time = 0.5
one_shot = true

[node name="refill_timer" type="Timer" parent="."]
wait_time = 0.5
one_shot = true

[node name="score_keeper" type="Node" parent="."]
script = ExtResource( 5 )

[node name="Background" type="Sprite" parent="."]
position = Vector2( 270, 345 )
scale = Vector2( 4.64844, 4.64844 )
texture = ExtResource( 1 )

[node name="DialogueBoxHolder" parent="." instance=ExtResource( 3 )]

[node name="DialogueBox" parent="DialogueBoxHolder" index="0"]
dialogue_path = "res://dialogue/day_two/day_two_outro.json"

[node name="Name" parent="DialogueBoxHolder/DialogueBox" index="3"]
custom_colors/default_color = Color( 0.847059, 0.768627, 0.811765, 1 )

[node name="Text" parent="DialogueBoxHolder/DialogueBox" index="4"]
custom_colors/default_color = Color( 0.847059, 0.768627, 0.811765, 1 )

[node name="BossFace" type="AnimatedSprite" parent="."]
position = Vector2( 162, 554 )
scale = Vector2( 2, 2 )
frames = ExtResource( 12 )

[node name="MarginContainer2" type="MarginContainer" parent="."]
visible = false
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 293.0
margin_right = 477.0
margin_bottom = 118.0
rect_scale = Vector2( 1.5, 1.5 )
theme = ExtResource( 4 )

[node name="score_header" type="RichTextLabel" parent="MarginContainer2"]
margin_right = 184.0
margin_bottom = 40.0
size_flags_vertical = 0
bbcode_enabled = true
bbcode_text = "[center]SCORE[/center]"
text = "SCORE"
fit_content_height = true

[node name="VScrollBar2" type="VScrollBar" parent="MarginContainer2/score_header"]
visible = false
anchor_right = 1.0
anchor_bottom = 1.0
max_value = 40.0
step = 1.0
page = 40.0

[node name="VScrollBar3" type="VScrollBar" parent="MarginContainer2/score_header"]
visible = false
anchor_right = 1.0
anchor_bottom = 1.0
step = 1.0

[node name="Control" type="Control" parent="."]
visible = false
margin_right = 576.0
margin_bottom = 1024.0
theme = ExtResource( 4 )

[node name="Header" type="ColorRect" parent="Control"]
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
margin_top = -1024.0
margin_bottom = -847.0
color = Color( 0.501961, 0.501961, 0.501961, 1 )

[node name="Screen2" type="Sprite" parent="Control"]
modulate = Color( 0.137255, 0.137255, 0.137255, 1 )
position = Vector2( 483, 111 )
rotation = 3.14159
scale = Vector2( 1.25, -1 )
texture = ExtResource( 11 )

[node name="Tool_0" type="Sprite" parent="Control"]
visible = false
position = Vector2( 382, 174 )
texture = ExtResource( 7 )

[node name="Tool_1" type="Sprite" parent="Control"]
visible = false
position = Vector2( 582, 174 )
texture = ExtResource( 7 )

[node name="Tool_2" type="Sprite" parent="Control"]
visible = false
position = Vector2( 782, 174 )
texture = ExtResource( 7 )

[node name="ToolsHeader" type="Sprite" parent="Control"]
visible = false
position = Vector2( 586, 62 )
texture = ExtResource( 8 )

[node name="score" type="RichTextLabel" parent="Control"]
margin_left = 289.0
margin_top = 83.0
margin_right = 545.0
margin_bottom = 123.0
rect_scale = Vector2( 1.5, 1.5 )
size_flags_vertical = 4
bbcode_enabled = true
bbcode_text = "[center]10000[/center]"
text = "10000"
fit_content_height = true

[node name="VScrollBar2" type="VScrollBar" parent="Control/score"]
visible = false
anchor_right = 1.0
anchor_bottom = 1.0
max_value = 40.0
step = 1.0
page = 40.0

[node name="VScrollBar3" type="VScrollBar" parent="Control/score"]
visible = false
anchor_right = 1.0
anchor_bottom = 1.0
step = 1.0

[node name="Footer" type="ColorRect" parent="Control"]
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
margin_top = -174.0
margin_bottom = 3.0
color = Color( 0.501961, 0.501961, 0.501961, 1 )

[node name="MarginContainer" type="MarginContainer" parent="Control"]
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 192.0
margin_top = -174.0
margin_right = -127.0
margin_bottom = -56.0
rect_scale = Vector2( 1.5, 1.5 )

[node name="Tool_3" type="Sprite" parent="Control"]
position = Vector2( 287, 937 )
scale = Vector2( 0.5, 0.5 )
texture = ExtResource( 7 )

[node name="Tool_4" type="Sprite" parent="Control"]
position = Vector2( 387, 937 )
scale = Vector2( 0.5, 0.5 )
texture = ExtResource( 7 )

[node name="Tool_5" type="Sprite" parent="Control"]
position = Vector2( 487, 937 )
scale = Vector2( 0.5, 0.5 )
texture = ExtResource( 7 )

[node name="ToolsHeader2" type="Sprite" parent="Control"]
visible = false
position = Vector2( 389, 881 )
scale = Vector2( 0.5, 0.5 )
texture = ExtResource( 8 )

[node name="Protester" type="Sprite" parent="Control"]
visible = false
position = Vector2( 103, 938 )
texture = ExtResource( 10 )

[node name="Screen" type="Sprite" parent="Control"]
visible = false
position = Vector2( 103, 939 )
texture = ExtResource( 11 )

[connection signal="dialog_box_closed" from="DialogueBoxHolder/DialogueBox" to="." method="_on_DialogueBox_dialog_box_closed"]

[editable path="DialogueBoxHolder"]
